# Programming

./: .gitignore  README.md  a.out  studentRecord.txt
Arduino/: IRremote.cpp  Servo.cpp
Arduino/IRSensor/: IRSensor.ino
Arduino/Servo/: Servo.ino
C/: BinaryCounter  BinaryCounter.c  Struct.c
C++/: FourierTransform  FourierTransform.cpp  matplotlibcpp-project.cpp
C++/fourier-project/: CMakeLists.txt
C++/fourier-project/src/: main.cpp
C++/sfml-project/: CMakeLists.txt
C++/sfml-project/src/: main.cpp
C++/wx-project/: CMakeLists.txt
C++/wx-project/src/: hi  main.cpp
C/Test/: HelloWorld  HelloWorld.c
C/old-build/: oldmakefile.txt
Cpp/: sfml  sfml.cpp
Python/: HelloName.py  Lesson6-ProgrammingProblem1.py  Lesson6-ProgrammingProblem2  Notes  PDFReader.py  PascalsTriangle.py  RegularExpressions.py  SelfTestQuestion2  WebScraper.py
Python/ATM/: ATM.py
Python/Demos/: 3-ProgrammingError.py  Demo2.py  L2-Demo2.py  L2-Demo2_modified.py  L2-Demo3.py  L2_Exercise1.py  L2_PP1.py  L2_PP2.py  L2_PP2_Class_Activity.py  L3_PP2.py  L5_PP4.py  NumberGuesser.py  PrintName.py  Sales.py  TypeConversion.py  TypeError.py  rps.py
Python/Demos/3-ProgrammingWriting/: AreaRectangle.py  EvenOdd.py  MagicDates.py  PosNegNumbers.py
Python/Demos/4-ProgrammingWriting/: CreditCard.py
Python/Lesson-6/ATM-Hands on Activity/: ATM.py
Python/Lesson-6/Demo Programs/: L6_PP1.py  L6_PP2.py  myCalender.py
Python/Lesson-6/L6_PP3/: checkMark.py
Python/Lesson-6/L6_PP4/: circle.py  geometry.py
Python/Lesson-6/L6_STQ -class activity/: mainModule.py
Python/Lessons/Lesson-1/: Demo1.py  eeeeeeeee.py
Python/Lessons/Lesson-11/: T11-Q2.py  T11-Q3.py  Tutorial_Q3.txt  studentRecord.txt
Python/Lessons/Lesson-2/: L2-Demo1.py  L2-Demo4.py  Tutorial2.py
Python/Tutorial/: Tutorial-1.py
arduino/: IRSensor.cpp  platformio.ini
c/: BinaryCounter.c  HelloWorld  Memory  Memory.c  Struct
c/Test/: File.txt
c/old-build/: CMakeCache.txt
cpp/fourier-project/: CMakeLists.txt  data.csv
matlab/: Practice4_1.m  area_cone.m  bmi_calculator.m  calSeries3.m  calculateCylinder.m  diagonal_zero.m  even_odd.m  findAngle.m  graph_circles.m  graph_xsin.m  integration.m  myGraph1.m  plot_graph.m  prime_number.m  prod_fraction.m  series.m  stationary_point.m  sum_reciprocal.m  zDistribution.m
python/: PascalsTriangle.py  SLT.py  TextComparer.py  dummy.py
python/opencv-project/: main.py
(+50 files in other folders)
